# price-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: price_monitor.db
docs/: PRD.md  SOFTWARE_ARCHITECTURE.md
src/price_monitor/: exceptions.py  main.py
src/price_monitor/dashboard/: app.py
src/price_monitor/database/: connection.py  schema.py
src/price_monitor/database/repositories/: price_history_repository.py  product_repository.py
src/price_monitor/models/: __init__.py  price_record.py  product.py  product_data.py
src/price_monitor/scrapers/: __init__.py  base.py  exceptions.py  fake_scraper.py  kabum.py  scraper_factory.py
src/price_monitor/services/: product_service.py
