[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "price-monitor"
version = "0.1.0"
description = "Open-source application for monitoring product prices across multiple online stores."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

authors = [
    { name = "Luã Kaique da Silva" }
]

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
